Removed prints, working movement bounds