@@ -7,8 +7,9 @@ public final class Helpers {
             if (System.getProperty("os.name").contains("Windows"))
                 new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
             else
-                Runtime.getRuntime().exec("clear");
+                new ProcessBuilder("clear").inheritIO().start().waitFor();
         } catch (Exception e) {
+            System.out.println(e);
         }
     }
 
